<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.search.SearchFragment">

    <!-- TODO: Update blank fragment layout -->


    <android.widget.EditText
        android:id="@+id/searchEditText"
        android:layout_width="254dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/search_box"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/searchButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnVoice"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.widget.ImageButton
        android:id="@+id/searchButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/ic_search_btn"
        app:layout_constraintBottom_toBottomOf="@+id/searchEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/searchEditText"
        app:layout_constraintTop_toTopOf="@+id/searchEditText" />

    <android.widget.ImageButton
        android:id="@+id/btnVoice"
        android:layout_width="30dp"
        android:layout_height="43.5dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/ic_voice"
        app:layout_constraintBottom_toBottomOf="@+id/searchEditText"
        app:layout_constraintEnd_toStartOf="@+id/searchEditText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/searchEditText" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:chipSpacingHorizontal="5dp"
        app:layout_constraintStart_toStartOf="@+id/btnVoice"
        app:layout_constraintTop_toBottomOf="@+id/searchEditText"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip"
            style="@style/CustomChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_chip_kid"
            android:textSize="11sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip2"
            style="@style/CustomChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/search_chip_englishEd"
            android:textSize="11sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip3"
            style="@style/CustomChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/search_chip_music"
            android:textSize="11sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip4"
            style="@style/CustomChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/search_chip_movie"
            android:textSize="11sp" />

    </com.google.android.material.chip.ChipGroup>


</androidx.constraintlayout.widget.ConstraintLayout>