<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="15dp"
    android:paddingTop="15dp"
    tools:context=".presentation.home.HomeFragment">

    <TextView
        android:id="@+id/tvPopularVideo"
        style="@style/head_line_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popular_video"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPopularVideo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/tvPopularVideo"
        tools:listitem="@layout/rv_item_home" />

    <TextView
        android:id="@+id/tvCategory"
        style="@style/head_line_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvPopularVideo" />

    <ImageView
        android:id="@+id/ivPopUp"
        android:layout_width="24dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_popup"
        app:layout_constraintBottom_toBottomOf="@+id/tvCategory"
        app:layout_constraintStart_toEndOf="@+id/tvCategory"
        app:layout_constraintTop_toTopOf="@+id/tvCategory" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/tvCategory"
        tools:listitem="@layout/rv_item_home" />

    <TextView
        android:id="@+id/tvCategoryChannel"
        style="@style/head_line_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/channel_by_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvCategory" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCategoryChannel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/tvCategoryChannel"
        tools:listitem="@layout/rv_item_home" />

</androidx.constraintlayout.widget.ConstraintLayout>